--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,9 @@
 :root {
-  --primary: #ebc908;
-  --primary-text: #1a1a1a;
-  --secondary: #ff1dec;
-  --secondary-text: #ffffff;
-  --accent: #505050;
-  --accent-text: #ffffff;
+  --primary: #ec6f08;
+  --primary-text: #000000;
+  --secondary: #ff7300f8;
+  --secondary-text: #000000;
+  --accent: #ffe604;
+  --accent-text: #000000;
+  --test-color: #521235;
 }
