My first commit

--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -5,5 +5,8 @@
   --secondary-text: #ffffff;
   --accent: #f1b30c;
   --accent-text: #000000;
-  --test-color: #521235;
+  --test-color1: #ff7300;
+  --test-color2: #24f81d;
+  --test-color3: #f8fc00;
+
 }
