--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -125,7 +125,7 @@ table {
 
 @font-face {
   font-family: "coder";
-  src: local("coder"), url(bangers.woff) format("woff");
+  src: local("coder"), url(Kemco.woff) format("woff");
 }
 
 
